# some_projects

FO_ControlPlatform/: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
FO_ControlPlatform/docs/: quickscript.py  uart_log.txt
FO_ControlPlatform/main/: CMakeLists.txt  Kconfig.projbuild  WiFi.c  btn.c  day_night_logic.c  main.c  send_data_ws.c  sht40_front.c  temp_server.c
FO_ControlPlatform/site/: package-lock.json  package.json  tailwind.config.cjs  vite.config.js
FO_ControlPlatform/src copy/: App.svelte
centralHub/: .gitignore  Makefile  valgrind_log.txt
centralHub/include/: db_handler.c  db_handler.h  hts2.c  hts2.h  motion.c  motion.h  mqtt_initializer.c  mqtt_initializer.h  mqtt_messagehandler.c  mqtt_messagehandler.h  shellyPlus1Pm.c  shellyPlus1Pm.h  shellyPlus2Pm.c  shellyPlus2Pm.h  shellyplugs.c  shellyplugs.h  trv.c  trv.h
enc_smart_module/: .gitignore  CMakeLists.txt  esp-idf-vscode-generated.gdb  gitlog.txt  output.txt  partitions.csv  sdkconfig  sdkconfig.esp32  sdkconfig.old  version.txt
iskra_sg/: .cproject  .gitignore  .project  Makefile  README  README.md  azure.ppk  backup.sh  copy_to_shared.sh  partitions.csv  sdkconfig  sdkconfig.old  version.txt
opencvTest/: .gitignore  README.md  eval.py  groundTruthmake.py  main.py  req.txt
ppedm_reticle/: .gitignore  CMakeLists.txt  config.json  main.cpp  req.txt  startup.sh  temporary.py
trv_local_automation/: db_req_handler.py  db_req_handler_2.py  dbat.py  deviceConfig.py  heat_automation.py  requirements.txt  serve.py  smart_home.db  testDB.py  testList.py
(+183 files in other folders)
